# vulkan-practical-guide

./: .clang-format  CMakeLists.txt  ISampeApp.h  ISampleApp.h  main.cpp  triangle_app.h
assets/shaders/: triangle.flag
core/: vulkan_context.cpp  vulkan_context.h
src/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
src/core/: asset_path.cpp  asset_path.h  buffer_resource.cpp  buffer_resource.h  command_buffer.cpp  command_buffer.h  glfw_surface_provider.cpp  gpu_resource_base.h  graphics_pipeline_builder.cpp  graphics_pipeline_builder.h  shader_loader.cpp  shader_loader.h  swapchain.cpp  swapchain.h  vulkan_context.cpp  vulkan_context.h
src/lib/: CMakeLists.txt
src/lib/core/: asset_path.cpp  asset_path.h  buffer_resource.cpp  buffer_resource.h  glfw_surface_provider.h  graphics_pipeline_builder.cpp  image_barrier.cpp  image_barrier.h  image_resource.cpp  image_resource.h  surface_provider.h  swapchain.cpp  swapchain.h  vulkan_context.cpp  vulkan_context.h
src/samples/: CMakeLists.txt
src/samples/simplecube/: CMakeLists.txt  main.cpp  simple_cube_app.cpp  simple_cube_app.h
src/samples/triangle/: CMakeLists.txt  main.cpp  triangle_app.cpp  triangle_app.h
